<?xml version="1.0"?>
<package format="2">
  <name>ros_mhs_topic</name>
  <version>0.0.0</version>
  <description>The ros_mhs_topic package</description>
  <license>TODO</license>
  <author email="2200018345@uad.ac.id">Sirly</author>
  <maintainer email="sirly28@todo.todo">sirly28</maintainer>
  <url type="website">http://uad.ac.id</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <export></export>
</package>
